dx/force-app/main/default/objects/TH_Context_Badge_Recommend__c/TH_Context_Badge_Recommend__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TH Context Badge Recommend</label>
</CustomObject>