dx/force-app/main/default/objects/TH_Context_Badge_Recommend__c/fields/Badge_Id__c.field-meta.xml
<CustomField>
    <fullName>Badge_Id__c</fullName>
    <label>Badge Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>