dx/force-app/main/default/objects/TH_Context_Badge_Recommend__c/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <label>Field Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>