dx/force-app/main/default/objects/TH_Context_Badge_Recommend__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Field_Value__c</columns>
    <columns>Badge_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>